[tool.poetry]
name = "homeerp-org"
version = "0.1.0"
description = "HomeERP Org"
authors = ["Beilak <beylak@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.4"
pydantic = {version = "*", extras = ["email"]}
fastapi = "^0.92.0"
dependency-injector = "^4.41.0"
uvicorn = "^0.20.0"
sqlalchemy-utils = "^0.40.0"
alembic = "^1.9.4"
psycopg2-binary = "^2.9.5"
passlib = "^1.7.4"
asyncpg = "^0.27.0"
starlette-prometheus = "^0.9.0"
aio-pika = "^9.1.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
